[build-system]
# This defines the build system and the backend used to build the package.
# We use setuptools as the build system.
requires = [
    "setuptools>=42",  # Setuptools is the most common tool for packaging and distribution
    "wheel"  # Wheel is the preferred packaging format
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# This section allows you to specify package details
packages = ["Audio_files_organizer_for_iphone"]

[tool.setuptools.package_data]


[tool.setuptools.entry_points]
# This section defines entry points for your package (e.g., CLI commands)
# This allows the script to be run directly from the command line using `audio-metadata-organizer`
console_scripts = [
    "audio-files-organizer-iphone=Audio_files_organizer_for_iphone.Audio_organizer:processit"
]
